Closed Bug 95659 Opened 23 years ago Closed 23 years ago

memory leak in prustack.c

Categories

(NSPR :: NSPR, defect, P2)

4.1.2
x86
Windows 2000

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: jeff, Assigned: wtc)

References

Details

(Keywords: memory-leak)

Attachments

(1 file)

the static variable _pr_stackLock is leaked. consider adding the following function to nsprpub/pr/src/threads/combined/prustack.c and calling it from PR_Cleanup() (see the "XXX: ..." comment near the bottom). #if 1//begin JLH added () void _PR_CleanupStacks(void) { if (!_pr_stackLock) return; PR_DestroyLock(_pr_stackLock); _pr_stackLock = NULL; } #endif//end JLH added ()
You should really start using the cvs diff -u command and attach that so it can go straight into the tree (if you need help learning about it just email me ksosez@softhome.net)
Severity: normal → major
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: mlk, patch, review
Fix checked in on the tip of NSPR.
Status: NEW → RESOLVED
Closed: 23 years ago
Priority: -- → P2
Resolution: --- → FIXED
Target Milestone: --- → 4.2
Blocks: 129902
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: