Bugzilla bug 95659: added _PR_CleanupStacks(), which is called from PR_Cleanup().  The patch is contributed by jeff@NerdOne.com. Modified files: primpl.h, prinit.c, prustack.c